--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/Nzubechukwu93/React-portfolio",
+  "homepage": "https://nzubechukwu93.github.io/Oriji-portfolio",
   "name": "portfolio",
   "private": true,
   "version": "0.0.0",
