--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "homepage": "https://nzubechukwu93.github.io/Oriji-portfolio",
   "name": "portfolio",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://nzubechukwu93.github.io/Nzube_Dev/",
   "type": "module",
   "scripts": {
     "dev": "vite",
